--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "task1": "nodemon/bin/nodemon.js task1.js",
-    "task2": "nodemon/bin/nodemon.js task2.js",
-    "task3": "nodemon/bin/nodemon.js task3.js"
+    "task1": "nodemon --exec babel-node task1.js",
+    "task2": "nodemon --exec babel-node task2.js"
   },
   "dependencies": {
     "csvtojson": "^2.0.10",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
