--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "task1": "nodemon --exec babel-node task1.js",
-    "task2": "nodemon --exec babel-node task2.js"
+    "task1": "nodemon --exec babel-node task1/app.js"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10",
+    "babel-preset-stage-2": "^6.24.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
